syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 832
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message SelectWorktopOptionReq {
	uint32 gadget_entity_id = 2;
	uint32 option_id = 5;
}
