syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message WorktopInfo {
	repeated uint32 option_list = 1;
	bool is_guest_can_operate = 2;
}
